Added migration for Notes, PartnerTypes, Attachments #7 , Account #6, Companies #8, Suppliers #9

--- a/PGMS.Web/appsettings.json
+++ b/PGMS.Web/appsettings.json
@@ -3,7 +3,12 @@
     "Default": {
       "ConnectionString": "Server=localhost\\SQLExpress;Database=PGMS_Default_v1;Integrated Security=true",
       "ProviderName": "System.Data.SqlClient"
+    },
+    "Erp": {
+      "ConnectionString": "Server=localhost\\SQLExpress;Database=PGMS_Erp_v1;Integrated Security=true",
+      "ProviderName": "System.Data.SqlClient"
     }
+
   },
   "Logging": {
     "IncludeScopes": false,
