Added account attachments for file uploads #6 fixed initial migration and splitted attachments for companies and accounts

--- a/PGMS.Web/PGMS.Web.csproj
+++ b/PGMS.Web/PGMS.Web.csproj
@@ -84,4 +84,7 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Serenity.CodeGenerator" Version="3.5.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Modules\Erp\SupplierRepresentatives\" />
+  </ItemGroup>
 </Project>
