--- a/PGMS.Web/package.json
+++ b/PGMS.Web/package.json
@@ -16,6 +16,7 @@
     "@types/jspdf": "^1.1.31",
     "@types/sortablejs": "^1.3.31",
     "@types/toastr": "^2.1.33",
+    "@types/react": "^16.1.0",
     "chart.js": "^2.7.1",
     "less": "^2.7.2",
     "vue": "^2.5.2"
